--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sourvey",
+  "name": "",
   "version": "0.1.0",
   "homepage": "https://ZeinHome.github.io/Sourvey/",
   "private": true,
